--- a/src/components/pages/Survey/Menu/ActionTabs/ActionButton/action-button.module.scss
+++ b/src/components/pages/Survey/Menu/ActionTabs/ActionButton/action-button.module.scss
@@ -1,4 +1,5 @@
-.actionButton {
+.buttonWrapper {
+  display: inline-block;
   position: relative;
   margin: 0 0.8rem;
 
@@ -12,16 +13,20 @@
     background: #00000017;
   }
 
-  &.active {
-    color: #3f51b5;
-    background: #3f51b512;
-  }
-
   &:last-child {
     margin-right: 0;
 
     &:before {
       content: none;
     }
+  }
+}
+
+.actionButton {
+  transition: all 0.125s;
+
+  &.active {
+    color: #3f51b5;
+    background: #3f51b512;
   }
 }
