--- a/src/components/pages/Survey/DataView/Table/table.module.scss
+++ b/src/components/pages/Survey/DataView/Table/table.module.scss
@@ -14,11 +14,10 @@
 
 .empty {
   display: flex;
-  flex-grow: 1;
   justify-content: center;
   align-items: center;
-  padding: 3rem 0;
   font-weight: 600;
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.54);
+  height: 100%;
 }
