--- a/src/components/pages/History/Record/Statistics/Metrics/Label/label.module.scss
+++ b/src/components/pages/History/Record/Statistics/Metrics/Label/label.module.scss
@@ -15,7 +15,7 @@
 
 .value {
   min-width: 3rem;
-  padding: 0.25rem 5px 0;
+  padding: 0.5rem 1rem 0.25rem;
   border: 1px solid #3f51b5b5;
   border-radius: 5px;
   text-align: center;
