--- a/src/components/pages/History/Record/Toolbar/toolbar.module.scss
+++ b/src/components/pages/History/Record/Toolbar/toolbar.module.scss
@@ -5,10 +5,20 @@
 }
 
 .button {
+  position: relative;
   margin-left: 1rem;
+  padding: 12px;
   transition: color 0.125s;
 
   &.favorite {
     color: #ffc535;
   }
+}
+
+.loadingBtn {
+  position: absolute;
+  display: flex;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
