--- a/client/src/assets/css/index.scss
+++ b/client/src/assets/css/index.scss
@@ -6,6 +6,13 @@ html {
   overflow-y: scroll;
 }
 
+a {
+  font-size: inherit;
+  text-transform: inherit;
+  text-decoration: inherit;
+  color: inherit;
+}
+
 button {
   font-size: inherit;
 }
